2001-07-26  Richard Hestilow  <hestilow@ximian.com>

	* applier.c: Remove all bonobo-conf stuff.

	* preferences.[ch]: New functions preferences_new_from_bonobo_pbag
	and preferences_new_from_bonobo_db.

2001-07-26  Bradford Hovinen  <hovinen@ximian.com>

	* background-properties.glade: Tweak borders and padding

	* applier.c (get_geometry): Tweak geometry settings
	(renderer_render_wallpaper): Rendering geometry fixes
	(renderer_render_wallpaper): Remove debugging code

	* background-properties-capplet.c (property_change_cb): Accept
	applier as argument; retrieve property bag from applier
	(realize_cb): Retrieve applier from widget
	(setup_dialog): Store property bag in applier

	* applier.c (renderer_new): Store applier inside renderer; accept
	applier as function parameter

	* background-properties-capplet.c (create_dialog): Store the
	applier inside the widget

	* applier.c (struct _ApplierPrivate ): Define preview_widget here
	rather than globally
	(applier_get_preview_widget): Make this a method of the applier class

2001-07-25  Chema Celorio  <chema@celorio.com>

	* Makefile.am ($(oaffile)): remove the oaffile_IN_RULE macro and copy
	it here
	* Makefile.am: remove the DESKTOP_IN_RULE and copy the sed here

2001-07-24  Bradford Hovinen  <hovinen@ximian.com>

	* main.c (setup_dialog): Use bonobo_peditor_option_menu_construct

2001-07-25  Richard Hestilow  <hestilow@ximian.com>

	* main.c (setup_dialog): Hide opacity settings for now.
	
	* background-properties.glade: Rename opacity label. 

2001-07-24  Richard Hestilow  <hestilow@ximian.com>

	* applier.c (output_compat_prefs): Write to gnome-config to make
	nautilus happy. 
	(applier_apply_prefs): Change of is_nautilus_running handling
	logic to still output legacy settings. Also, call
	output_compat_prefs if is_root
.
2001-07-24  Richard Hestilow  <hestilow@ximian.com>
	
	* main.c (main): Pass in legacy files to capplet_init.

2001-07-23  Bradford Hovinen  <hovinen@ximian.com>
