@@ -1,3 +1,8 @@
+2001-07-26  Bradford Hovinen  <hovinen@ximian.com>
+
+	* background-properties-capplet.c (create_dialog): Add a "(none)"
+	string to the history
+
 2001-07-26  Richard Hestilow  <hestilow@ximian.com>
 
 	* applier.c: Remove all bonobo-conf stuff.
